overflow test fix

--- a/code/pricing.css
+++ b/code/pricing.css
@@ -10,6 +10,7 @@ html, body {
     height: 100%;
     overflow-x: hidden;
     max-width: 100%;
+    position: relative;
     background-color: #fafafa;
     margin: 0;
 }
